I wrote code for (1) a PCA of environmental variables and (2) anovas among plant groupings by single environmental variables.

--- a/2_environ_NMDS.Rmd
+++ b/2_environ_NMDS.Rmd
@@ -3,21 +3,31 @@
 ```{r install libraries, message=FALSE}
 
 library(tidyverse) # includes ggplot2 - data visulization, dplyr, tidyr, readr, purr, tibble, stringr, forcats
-library(ggpubr) # customize ggplot2 for publication
-library(broom)
-library(AICcmodavg)
-library(vegan)
-library(readxl) # for .xls and .xlsx sheets
-library(janitor)
-library(calecopal) 
-library(multcompView)
-library(plotly)
-if (!require(devtools)) {
-  install.packages("devtools")
-}
-devtools::install_github("gavinsimpson/ggvegan")
 library(here)
-library(ggpmisc)
+library(cluster)
+library(vegan)
+library(ggvegan)
+library(indicspecies)
+library(plotly)
+library(gridExtra)
+library(calecopal) 
+
+# library(ggpubr) # customize ggplot2 for publication
+# library(broom)
+# library(AICcmodavg)
+# library(readxl) # for .xls and .xlsx sheets
+# library(janitor)
+
+# library(multcompView)
+# if (!require(devtools)) {
+#   install.packages("devtools")
+# }
+# devtools::install_github("gavinsimpson/ggvegan")
+# 
+# library(ggpmisc)
+
+# Set seed for analyses
+set.seed(3980)
 ```
 
 
@@ -49,34 +59,39 @@ extracted_prep <- extracted_join%>%
                                     site_rep == "INT4" ~ "INT4_1",
                                     site_rep == "INT5" ~ "INT5_1",
                                    TRUE ~ site_rep)) %>% 
+    mutate(rowname = 1:39) %>% 
      mutate(
       aspect = as.numeric(aspect),
       elevation = as.integer(elevation), # meters
       hillshade = as.numeric(hillshade), 
       slope = as.numeric(slope), # degrees
       site_rep = as.character(site_rep), 
-      site = as.character(site)
-      ) 
+      site = as.character(site), 
+      rowname = as.character(rowname)
+      )
+
 
 extracted_prep$site_rep <- gsub("\\.", "_", extracted_prep$site_rep)
 
 # view(extracted_prep)
 # length(extracted_prep$site_rep)    # n = 39
 
+cluster <- extracted_prep %>% dplyr::select(rowname, cluster)
  
 ```
 
 # Prepare environ data for an NMDS (numbers only)
 
 ```{r}
-prep <- extracted_prep %>%  
-  dplyr::select(!c("site_rep", "aspect", "last_fire"))
+df <- extracted_prep %>%  
+  dplyr::select(!c("site", "site_rep", "aspect", "last_fire", "rowname")) 
+
 ```
 
 ### means (SD)
 ```{r}
 
-means <- prep %>% 
+means <- df %>% 
   group_by(cluster) %>% 
    summarize(elev_mean = mean(elevation),
             elev_sd = sd(elevation),
@@ -96,24 +111,48 @@ means <- prep %>%
   pivot_longer(cols = 2:15, values_to = "mean", names_to = "variable") %>% 
   pivot_wider(id_cols = cluster, names_from = variable, values_from = mean)
 
-means
 ```
 
-# NMDS
-```{r nmds by species percent cover}
+### NMDS
+#### Visualize community differences by environmental variables
 
+```{r nmds by species percent cover}
+          
 # the AUTOTRANSFORM = F skips the automatic data transformations and uses the input data as is
 # - when the raw data contains the information you need (e.g., abundance)
 # - when you have a small number of samples or small number of variables
 # - when you want to preserve the original scale of the data (e.g., interested in the absolute differences betwen two sets of measurements)
 
-environNMDS <- metaMDS(prep,
-                                  autotransform = F, # or T
-                                  distance = "bray",   # bray or "raup"
-                  k = 2, #dimentions
-                 try = 100, #runs
-                 trymax = 100) # this is more appropriate for my data
+mds <- metaMDS(df, 
+                       autotransform = TRUE, # FALSE or TRUE
+                       distance = "bray",   # bray or "raup" - Bray is the best for community data
+                      k = 3, #dimentions
+                      trymax = 400) # this is more appropriate for my data
 
+mds$stress
+# k = 2D: stress test = 0.08459596
+# k = 3D: stress test = 0.05561168
+# k = 4D: stress test = 0.03806059
+
+
+stressplot(mds) # A Shepard plot compares the observed dissimilarities (distances in the original data) to the fitted distances (distances in the reduced NMDS space).
+gof <- goodness(mds) # Higher values indicate points that are poorly represented in the reduced-dimensional space, contributing more to the stress
+gof
+# min(gof) = 0.004642076
+# max(gof) = 0.01496991 <- relationships in your data are well represented!
+
+plot(mds, display = "sites", type = "none")
+points(mds, display = "sites", cex = 2* # 2x for visibility
+         gof/mean(gof)) # standardized by the mean
+# larger points = less well represented
+
+
+# Plot NMDS
+mds.df <- vegan::scores(mds, display = "sites") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("rowname") %>% 
+  full_join(cluster, by = "rowname") %>% 
+    mutate(cluster = as.character(cluster))
 
 # uses the RAUP-CRICK dissimilarity index to calculate pairwise dissimilarities
 # - adjusts for spp richness
@@ -121,55 +160,168 @@ environNMDS <- metaMDS(prep,
 # - more useful when interested in community STRUCTURE rather than individual species
 # - takes into account differences in species evenness
 # abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, distance = "raup") 
-environNMDS
+
+
+ggplot(mds.df,
+       aes(x = NMDS1,
+           y = NMDS2,
+           color = cluster, 
+           shape = cluster)) +
+  geom_point(size = 3, alpha = 0.8) +
+  stat_ellipse() + 
+  theme(axis.title = element_text(size = 20)) +
+  theme(axis.text = element_text(size = 16))
+
+
+ggplot(mds.df,
+       aes(x = NMDS2,
+           y = NMDS3,
+           color = cluster,
+           shape = cluster)) +
+  geom_point(size = 3, alpha = 0.8) +
+  stat_ellipse() + 
+  theme(axis.title = element_text(size = 20)) +
+  theme(axis.text = element_text(size = 16))
+
+
+p <- plot_ly(mds.df,
+        x = ~NMDS1,
+        y = ~NMDS2,
+        z = ~NMDS3,
+        type =  "scatter3d",
+        color=cluster)
+p
+
+
+
 ```
 
-### stress test
+##### PCA
+```{r}
 
-```{r stress tests nmds}
-stressplot(environNMDS)
-# if stress tests are really low ==> I may have insufficient data. :/
+birdPCA <- rda(df)
 
-plot(environNMDS)
-ordiplot(environNMDS, type = "p")
-ordiplot(environNMDS, type = "t")
-# ab_nmds.fort <- fortify(as.data.frame(abcover_byspecies_NMDS))
-```
+PCAscores <- vegan::scores(birdPCA, display = "sites") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("site") %>% 
+    mutate(rowname = 1:39) %>% 
+    mutate(rowname = as.character(rowname)) %>% 
+  full_join(cluster, by = "rowname") %>% 
+   mutate(cluster = as.character(cluster)) 
 
+PCAvect <- scores(birdPCA, display = "species") %>% 
+  as.data.frame()
 
-
-```{r scores nmds}
-
-scores(environNMDS)
-
-# plot_df <- scores(abcover_byspecies_NMDS, display = "sites") %>% # from An's code
-#  as.data.frame() %>%
-#  rownames_to_column("stand_core") %>%
-#  full_join(seedbank_bysitecore, by = "stand_core")
-
-environNMDS_df <- data.frame(environNMDS$points, extracted) 
-head(environNMDS_df)
-```
-
-
-
-
-# figure 
-
-```{r ggplot percent cover by environ}
-
-ggplot(environNMDS_df,  
-       aes(x = MDS1, y = MDS2, color = cluster_5)) +
-  geom_point(size = 5, alpha = 0.8) +
+plot_PCA <- ggplot() +
+  geom_point(data = PCAscores, 
+             aes(x = PC1, y = PC2, color = cluster, shape = cluster, size = 3)) +
+  geom_vline(xintercept = c(0), color = "grey70", linetype = 2) +
+  geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
+  geom_segment(data = PCAvect, aes(x = 0, y = 0, xend = PC1, yend = PC2), arrow = arrow(length = unit(0.2, "cm"))) +
+  geom_text(data = PCAvect, aes(x = PC1, y = PC2, label = rownames(PCAvect))) +
   theme_bw() +
-  labs(title = "NMDS of transects by environmental variables") +
-   theme_bw() +
-   stat_ellipse(level = .95, linetype = 2, linewidth = 1) +
-    labs(title = "Transects by environmental variables", color = cluster_5)
+  labs(x = "PC1",
+       y = "PC2",
+       title = "Principal Components Analysis") 
+
+
+plot_PCA
 
 ```
 
 
+```{r}
+########################################## elevation
+df$cluster <- as.factor(df$cluster)  # Convert cluster to factor
+
+hist(df$elevation)
+shapiro.test(df$elevation)
+# Shapiro-Wilk normality test
+# 
+# data:  df$elevation
+# W = 0.88322, p-value = 0.0007544 <-- not normally distributed
+
+kruskal.test(elevation ~ cluster, data = df)
+pairwise.wilcox.test(df$elevation, df$cluster, p.adjust.method = "BH")
+# data:  df$elevation and df$cluster 
+# 
+#   1       2         3         4    
+# 2 0.036   -         -        -    
+# 3 0.366   0.036     -        -    
+# 4 0.351  0.181      0.151     -    
+# 5 0.366   0.366     0.221     0.943
+boxplot(elevation ~ cluster, df)
+## 2 is diff from 1 and 3
+
+########################################## hillshade
+hist(df$hillshade)
+shapiro.test(df$hillshade)
+# Shapiro-Wilk normality test
+# 
+# data:  df$hillshade
+# W = 0.97317, p-value = 0.467 <-- normally distributed
+summary(aov((hillshade ~ cluster), data = df))
+#  Df Sum Sq Mean Sq F value Pr(>F)   
+# cluster      4   4559  1139.7   4.071 0.0084 **
+# Residuals   34   9518   279.9                  
+
+TukeyHSD(aov(hillshade ~ cluster, df), conf.level=.95) 
+# $cluster
+#           diff         lwr        upr     p adj
+# 2-1 -25.126984 -49.4070518 -0.8469164 0.0395528 <-- 2 is shadier than 1
+# 3-1  -4.255556 -26.3924005 17.8812893 0.9807491
+# 4-1 -20.680556 -44.0914706  2.7303595 0.1045431
+# 5-1   2.844444 -24.0286660 29.7175549 0.9980272
+# 3-2  20.871429  -2.8715728 44.6144299 0.1072765
+# 4-2   4.446429 -20.4887104 29.3815675 0.9854365
+# 5-2  27.971429  -0.2394608 56.1823179 0.0528871 <-- not sig. 2 is shadier than 5
+# 4-3 -16.425000 -39.2784323  6.4284323 0.2564228 
+# 5-3   7.100000 -19.2888706 33.4888706 0.9361425
+# 5-4  23.525000  -3.9414074 50.9914074 0.1225369
+
+boxplot(hillshade ~ cluster, df)
+# 0 degrees = dark aka. lots of hillshading
+# 255 degrees = bright aka. lots of sun exposure
 
 
+########################################## southwestness
+hist(df$southwestness)
+shapiro.test(df$southwestness) # <- not normal
+kruskal.test(southwestness ~ cluster, data = df)
+pairwise.wilcox.test(df$southwestness, df$cluster, p.adjust.method = "BH")
+boxplot(southwestness ~ cluster, df)
 
+
+########################################## twi
+boxplot(twi ~ cluster, df)
+
+########################################## slope
+boxplot(slope ~ cluster, df)
+Gshapiro.test(df$slope) # <- normal
+summary(aov(slope ~ cluster, df))
+TukeyHSD(aov(slope ~ cluster, df), conf.level = .95)
+Fit: aov(formula = slope ~ cluster, data = df)
+# $cluster
+#          diff         lwr       upr     p adj
+# 2-1  4.865313  -5.3013433 15.031969 0.6454368
+# 3-1  1.879894  -7.3893422 11.149131 0.9765639
+# 4-1 -1.014681 -10.8174014  8.788040 0.9981919
+# 5-1 11.216590  -0.0358360 22.469017 0.0510664 <- not sig - 5 is steeper than 1
+# 3-2 -2.985419 -12.9271919  6.956355 0.9077278
+# 4-2 -5.879994 -16.3209440  4.560957 0.4943670
+# 5-2  6.351278  -5.4613095 18.163865 0.5395130
+# 4-3 -2.894575 -12.4638642  6.674714 0.9054976
+# 5-3  9.336696  -1.7129674 20.386359 0.1309924
+# 5-4 12.231271   0.7304168 23.732125 0.0324924 <-- 5 is steeper than 4
+
+
+########################################## lat
+boxplot(lat ~ cluster, df)
+
+########################################## long
+boxplot(long ~ cluster, df)
+
+########################################## fire_event_count
+boxplot(fire_event_count ~ cluster, df)
+
+```
